--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: install blas and lapack
+      run: sudo apt-get install -y libblas-dev liblapack-dev
     - name: build
       run: make clean ; make
     - name: tests
